--- a/CSS/index.css
+++ b/CSS/index.css
@@ -18,6 +18,33 @@ body {
 }
 
 .headerText {
+    text-align: left;   
+}
+
+h1, h3 {
+    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 1%;
+}
+
+.sidePic {
+    float: right;
+    margin-bottom: 1%;
+    margin-left: 1%;
+}
+
+.allText {
     text-align: left;
-    
+    margin-bottom: 1%;
+}
+
+hr {
+    margin: 5%;
+}
+
+.hobbies {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
