--- a/CSS/index.css
+++ b/CSS/index.css
@@ -24,7 +24,7 @@ body {
 h1, h3 {
     text-align: center;
     margin-top: 3%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
 
 .sidePic {
@@ -47,4 +47,6 @@ hr {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    margin-top: 1%;
+    margin-bottom: 6%;
 }
